--- a/src/main/java/cuie/instant_tan_squirrels/template_businesscontrol/style.css
+++ b/src/main/java/cuie/instant_tan_squirrels/template_businesscontrol/style.css
@@ -1,6 +1,6 @@
 .business-control {
     -fx-padding:          10;
-    -base-color:          rgb(255, 201, 104);
+    -base-color: rgb(56, 110, 255);
     -fx-background-color: rgb(255, 255, 250);
 }
 
@@ -11,7 +11,7 @@
 .business-control .editable-node {
     -fx-font-family:      'Lato Regular';
     -fx-font-size:        14;
-    -fx-text-fill:        derive(-base-color, -30%);
+    -fx-text-fill:        derive(-base-color, -50%);
     -fx-prompt-text-fill: derive(-base-color, 40%);
 }
 
@@ -22,13 +22,13 @@
 
 .business-control:invalid .editable-node {
     -fx-font-family: 'Lato Light';
-    -fx-text-fill:   red;
+    -fx-text-fill: red;
 }
 
 .business-control:mandatory .editable-node {
     -fx-background-color: white;
     -fx-border-color:     derive(-base-color, -30%);
-    -fx-border-width:     2;
+    -fx-border-width:     1;
     -fx-border-radius:    4;
 }
 
@@ -40,13 +40,13 @@
 }
 
 .business-control .read-only-node {
-    -fx-font-family:     'DS-Digital';
+    -fx-font-family:     'Roboto Light';
     -fx-pref-width:      80;
     -fx-max-width:       1024;
     -fx-alignment:       center;
     -fx-content-display: text-only;
-    -fx-font-size:       22;
-    -fx-text-fill:       rgb(139, 86, 70);
+    -fx-font-size:       20;
+    -fx-text-fill:       derive(-base-color, -40%);
 }
 
 .business-control .chooser-button {
