--- a/src/main/java/cuie/instant_tan_squirrels/template_businesscontrol/style.css
+++ b/src/main/java/cuie/instant_tan_squirrels/template_businesscontrol/style.css
@@ -68,4 +68,18 @@
     -fx-background-insets: 4;
 }
 
+.slider {
+    -fx-major-tick-unit: 1000;
+    fx-minor-tick-count: 10;
+    -fx-show-tick-labels: true;
+    -fx-snap-to-ticks: true;
+    -fx-control-inner-background: #4b41ff;
+}
+
+.slider .thumb {
+    -fx-background-image :url("/icons/icon-lightning.png");
+    -fx-padding: 17;
+    -fx-background-color: transparent;
+}
+
 
